--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -1475,6 +1475,10 @@ footer {
         }
     }
 
+    .responsive-yoga-design {
+        background-size: 100px 100px, 100px 100px!important; 
+    }
+
     .about-section {
         .col-lg-5 {
             padding: 20px;
